# datafix

./: Cargo.toml  LICENSE  README.md
datafix/: Cargo.toml
datafix/src/: lib.rs  result.rs
datafix/src/fixers/: mod.rs  rules.rs
datafix/src/serialization/: ctx.rs  dynamic.rs  mod.rs
datafix/src/serialization/builtins/: codecs.rs  record_builder.rs  records.rs
datafix/src/serialization/ops/: json.rs  mod.rs
examples/: Cargo.toml  game_config.rs  linked_list.rs  playground.rs  web_event.rs
src/: lib.rs  result.rs
src/builtins/: json.rs  mod.rs  record_builder.rs  records.rs
src/dynamic/: impls.rs  list.rs  mod.rs  object.rs  ops.rs
src/fixers/: builtins.rs  dynamic.rs  mod.rs  primitives.rs  rules.rs  schema.rs  tv.rs  types.rs
src/serialization/: builder.rs  codec.rs  combinators.rs  default.rs  dynamic.rs  mod.rs  ops.rs  primitives.rs  record.rs
src/serialization/builtins/: codecs.rs  mod.rs  record_builder.rs  records.rs
src/serialization/ops/: dynamic.rs  json.rs  mod.rs
