[package]
name = "datafix-examples"
version = "0.1.0"
publish = false
edition = "2024"

[[example]]
name = "playground"
path = "./playground.rs"

[[example]]
name = "game_config"
path = "./game_config.rs"

[[example]]
name = "linked_list"
path = "./linked_list.rs"

[[example]]
name = "web_event"
path = "./web_event.rs"


[dev-dependencies]
datafix = { workspace = true }
json = { workspace = true }
